--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Site Properities -->
   <title> test </title>
 
-  <link rel="stylesheet" type="text/css" href="/dist/semantic.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="/stylesheets/docs.css">
 
   
@@ -36,7 +36,7 @@
   <script src="/javascript/library/typing.js"></script>
 
   
-  <script src="/dist/semantic.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js"></script>
   
 
   <script src="/javascript/docs.js"></script>
