--- a/index.html
+++ b/index.html
@@ -13,34 +13,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="/stylesheets/docs.css">
 
-  
-  <script>
-  (function () {
-    var
-      eventSupport = ('querySelector' in document && 'addEventListener' in window)
-      jsonSupport  = (typeof JSON !== 'undefined'),
-      jQuery       = (eventSupport && jsonSupport)
-        ? '/javascript/library/jquery.min.js'
-        : '/javascript/library/jquery.legacy.min.js'
-    ;
-    document.write('<script src="' + jQuery + '"><\/script>');
-  }());
-  </script>
-  
-
-  <script src="/javascript/library/highlight.js"></script>
-  <script src="/javascript/library/highlight.languages.js"></script>
-  <script src="/javascript/library/history.js"></script>
-  <script src="/javascript/library/easing.js"></script>
-  <script src="/javascript/library/tablesort.js"></script>
-  <script src="/javascript/library/typing.js"></script>
-
-  
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js"></script>
-  
-
   <script src="/javascript/docs.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Karma:600,400' rel='stylesheet' type='text/css'>
 </head>
 
 <body id="example" class="pushable guide" ontouchstart="">
